--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@ navbar: Blog
 ---
 
 <div class="row">
-  <div class="page-content {% unless site.default_asides == empty and site.blog_index_asides == empty %}col-md-9{% else %}col-md-12{% endunless %}">
+  <div class="page-content col-md-offset-2 {% unless site.default_asides == empty and site.blog_index_asides == empty %}col-md-8{% else %}col-md-12{% endunless %}">
     <div class="blog-index" itemscope itemtype="http://schema.org/Blog">
     <meta itemprop="name" content="{{site.title}}" />
     {% if site.description %}<meta itemprop="description" content="{{site.description}}" />{% endif %}
@@ -34,7 +34,7 @@ navbar: Blog
   </div>
 
   {% unless site.default_asides == empty and site.blog_index_asides == empty %}
-    <aside class="sidebar col-md-3">
+    <aside class="sidebar col-md-3 toggled">
       {% if site.blog_index_asides.size %}
         {% include_array blog_index_asides %}
       {% else %}
