--- a/source/search/index.html
+++ b/source/search/index.html
@@ -4,14 +4,16 @@ title: Search
 search_omit: true
 ---
 
- <div class="col-md-6 col-md-offset-3" id="search">
+ <div class="col-md-8 col-md-offset-2" id="search">
   
-  <form action="/search" method="get">
+  <form  method="get">
+  <div class="form-group">
     <input type="text" id="search-query" class="form-control input-lg" name="q" placeholder="Search" autocomplete="off">
-	
+	 </div>
   </form>
 </div>
-<div class="col-md-6 col-md-offset-3"  id="search-results" style="display: none;">
+<div class="col-md-8 col-md-offset-2"  id="search-results" style="display: none;">
+  <br>
   <code>Search results</code>
   <div class="entries">
   </div>
