--- a/public/search/index.html
+++ b/public/search/index.html
@@ -26,7 +26,7 @@
   
 
   <link href="/assets/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
-<script src="/javascripts/libs/jquery/jquery-2.0.3.min.js"></script>
+<script src="/assets/javascripts/libs/jquery/jquery-2.0.3.min.js"></script>
 <script src="/assets/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/assets/jquery.bootstrap-autohidingnavbar.min.js"></script>
 
@@ -60,8 +60,6 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/"><strong>Fighting Dreamer</strong></a>
         </div>
@@ -73,9 +71,6 @@
                 </li>
                 <li >
                     <a href="/blog/archives">Archives</a>
-                </li>
-                 <li >
-                    <a href="/tags/">Tags</a>
                 </li>
                  <li >
                     <a href="/about/">About</a>
@@ -197,7 +192,7 @@
     <script type="text/javascript">
     $(".navbar-fixed-top").autoHidingNavbar();
     </script>
-    <script src="/javascripts/search.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/assets/javascripts/search.min.js" type="text/javascript" charset="utf-8"></script>
 
     <footer role="contentinfo"><div class="container">
     <p class="text-muted credits">
@@ -242,7 +237,7 @@
 
 
 <script src="/assets/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/javascripts/modernizr-2.0.js"></script>
+<script src="/assets/javascripts/modernizr-2.0.js"></script>
 
 
   </body>
