--- a/public/search/index.html
+++ b/public/search/index.html
@@ -29,6 +29,7 @@
 <script src="/assets/javascripts/libs/jquery/jquery-2.0.3.min.js"></script>
 <script src="/assets/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/assets/jquery.bootstrap-autohidingnavbar.min.js"></script>
+<script src="/assets/javascripts/jquery.particleground.min.js"></script>
 
 
 
@@ -191,7 +192,8 @@
     </script>
     <script type="text/javascript">
     $(".navbar-fixed-top").autoHidingNavbar();
-    
+    $('body').particleground();
+
     </script>
   <script src="/assets/javascripts/search.min.js" type="text/javascript" charset="utf-8"></script>
 
